--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body class="bg-slate-100">
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
